--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
     margin: 0%;
     background: ivory;
     background-color: aqua;
+    text-align: center;
 
 
 }
@@ -11,11 +12,14 @@
     text-align: center;
     width: 250px;
     height: 80px;
+    align-items: center;
+    margin-top: 4%;
+    margin-left: 40%;
     
 }
-.banner {
-    width: 100%;
-    text-align: center;
+.banner,video {
+    width: 90%;
+    margin-top: 2%;
 
 }
 .text {
@@ -60,13 +64,14 @@ button{
 }
 .row {
     text-align: center;
-    margin-top: 1%;
+    margin-top: 4%
 }
 .mission {
     text-align: center;
 }
 .con {
     text-align: center;
+    margin-top: 4%;
     
 }
 
@@ -81,4 +86,20 @@ input {
 }
 .text,h1 {
     color: black;
+}
+header {
+    background: blue;
+    color: white;
+    padding: 1rem 0;
+    text-align: center;
+
+}
+header h1{
+    font-size: 2.5rem;
+    margin-bottom: 0.5rem;
+}
+
+
+footer {
+    background-color: blue;
 }
